@@ -19,7 +19,13 @@ NEW FEATURES:
 		* Changed references to Zombono to the value of the name field of the gameinfo_t structure (loaded from gameinfo.json)
 	* Changed build output directory from $(SolutionDir)/build/out to $(SolutionDir)/build/$(Configuration)
 		* This was meant to be temporary but took 7 months to change...
-	* Changed game binary to be EuphoriaEngine.exe
+	* Changed game binary to be EuphoriaEngine.exe as this engine will be used for many games to come (hopefully)
+	* Changed intro graphic
+	* Made the engine version a cvar
+	* Renamed many gamedll functions for consistency
+	* Added the time of build to the version cvar
+	* Refactored gamemodes
+		* Each gamemode now has its own player spawn and update code
 
 BUG FIXES:
 	* Fixed the game crashing on minimise
